# bookme-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.ps1
.github/workflows/: ci-cd.yml
docs/: ADMIN_ARCHITECTURE.md  ARCHITECTURE_VISUAL.txt  CHEAT_SHEET.md  COMMON_TASKS.md  DOMAIN_CONFIGURATION.md  MIGRATION_GUIDE.md  PLATFORM_STAFF_DESIGN.md  PLATFORM_STAFF_IMPLEMENTATION.md  PLATFORM_STAFF_QUICK_START.md  PLATFORM_STAFF_SECURITY.md  PLATFORM_STAFF_SECURITY_FINAL.md  QUICK_REFERENCE.md  RBAC_GUIDE.md  README.md  SECURITY_FIX_SUMMARY.md  SETUP_GUIDE.md  TENANT_GUIDE.md  UUID_MIGRATION_FIX.md
docs/architecture/: modular-monolith.md
docs/uml/: tenant-system.iuml
nginx/: nginx.conf
nginx/conf.d/: bookme.conf
src/: __init__.py  asgi.py  celery.py  manage.py  urls.py  urls_public.py  wsgi.py
src/app_types/: README.md  __init__.py
src/app_types/clinic/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/app_types/common/: __init__.py  models.py
src/app_types/gym/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/base_start/: __init__.py
src/base_start/bookings/: __init__.py  admin.py  apps.py  models.py  urls.py
src/base_start/communications/: __init__.py  admin.py  apps.py  models.py
src/base_start/communications/migrations/: 0001_initial.py
src/base_start/customers/: __init__.py  apps.py  models.py
src/base_start/customers/migrations/: 0001_initial.py
src/base_start/payments/: __init__.py  admin.py  apps.py  models.py
src/base_start/payments/migrations/: 0001_initial.py
src/base_start/resources/: __init__.py  apps.py  models.py  urls.py
src/base_start/services/: __init__.py  apps.py  models.py
src/base_start/staff/: __init__.py  admin.py  apps.py  models.py  urls.py
src/base_start/staff/migrations/: 0001_initial.py
src/bookme/: __init__.py  asgi.py  celery.py  urls.py  urls_public.py  wsgi.py
src/bookme/bookings/: __init__.py  apps.py  models.py
src/bookme/bookings/migrations/: 0001_initial.py
src/bookme/communications/: __init__.py  apps.py  models.py  urls.py
src/bookme/core/: __init__.py  admin_site.py  apps.py  exceptions.py  host_validation.py  middleware.py  models.py  pagination.py
src/bookme/customers/: __init__.py  admin.py  apps.py  models.py  urls.py
src/bookme/payments/: __init__.py  apps.py  models.py  urls.py
src/bookme/resources/: __init__.py  admin.py  apps.py  models.py
src/bookme/resources/migrations/: 0001_initial.py
src/bookme/services/: __init__.py  admin.py  apps.py  models.py  urls.py
src/bookme/services/migrations/: 0001_initial.py
src/bookme/settings/: base.py  local.py  production.py  test.py
src/bookme/staff/: __init__.py  apps.py  models.py
src/bookme/tenant/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
src/bookme/users/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py
src/bookme/users/migrations/: 0001_initial.py
src/settings/: __init__.py  base.py  local.py  production.py
src/tenants_core/: __init__.py
src/tenants_core/core/: __init__.py  admin_site.py  apps.py  host_validation.py  middleware.py  modules.py
src/tenants_core/rbac/: __init__.py  admin.py  apps.py  backends.py  managers.py  models.py  signals.py
src/tenants_core/rbac/management/: __init__.py
src/tenants_core/rbac/migrations/: 0001_initial.py  0002_seed_system_roles.py
src/tenants_core/tenant/: __init__.py  admin.py  app_configs.py  apps.py  models.py  views.py
src/tenants_core/tenant/migrations/: 0001_initial.py  0002_alter_tenantlifecycle_tenant.py  0003_tenant_app_type_tenant_enabled_modules_and_more.py  0004_change_tenant_id_to_uuid.py  0005_fix_domain_tenant_id_to_uuid.py  0006_regenerate_proper_uuids.py
src/tenants_core/users/: __init__.py  admin.py  apps.py  forms.py  models.py  views.py
(+18 files in other folders)
